main feature add

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Legendary Cricket</string>
+    <string name="bullet_points">&lt;ul&gt;\n&lt;li&gt;Point 1&lt;/li&gt;\n&lt;li&gt;Point 2&lt;/li&gt;\n&lt;li&gt;Point 3&lt;/li&gt;\n&lt;/ul&gt;</string>
+
 </resources>
